fix: map does not spill over on right panel
- Remove all absolute CSS postion of the map and set map height to 100%
  of view port
- Remove padding around map
- Set proper padding of right panel

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -1,14 +1,15 @@
-  div.ch-map {
-     position: fixed;
-     top: 0;
-     left: 0;
-     right: 300px;
-     bottom: 0;
-     overflow: hidden;
-     padding: 0;
- }
+.ch-map {
+  height: 100vh; /* 100% of the viewport height */
+}
 
- /* If not using map tiles, show a white background */
- .leaflet-container {
-     background-color: white !important;
- }
+/* No padding around map */
+.container-fluid {
+  padding: 0px;
+}
+.container-map .col-sm-9 {
+  padding: 0px;
+}
+
+.container-project {
+  padding: 15px;
+}
